# SPDX-FileCopyrightText: 2026 TPT Solutions
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "antenna-control"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Deterministic antenna tracking loop with a simulated dish backend (Phase 3)."

[dependencies]
orbital-mechanics = { path = "../orbital-mechanics" }

[dev-dependencies]
