# SPDX-FileCopyrightText: 2026 TPT Solutions
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "orbital-mechanics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SGP4/SDP4 propagator, visibility windows, and handoff optimization (simulation-only)."

[dependencies]

[dev-dependencies]
